# tenaliGit

./: .replit  LICENSE  README.md  app.py  email_test.py  main.py  pyproject.toml  requirements.txt  sri.py  vensun.py
css/: mystyles.css
static/test_db/css/: style.css
static/vensun/css/: style _test.css  styles.css
templates/test_db/db_model/: db_core_for_all.py
templates/test_db/doc/: db_test_login.html
templates/test_db/doc/frag/: db_test_index.html  db_test_logout.html  db_test_reg.html
tenali_env/: pyvenv.cfg
tenali_env/Scripts/: activate  activate.bat
